[Windows][prism-d3d] Fix compiler _CRT_SECURE_ warnings

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 10
    • Affects Version/s: 8, 9
    • Component/s: javafx
    • None

      C:\java\javafx\10-dev\jfx\rt\modules\javafx.graphics\src\main\native-prism-d3d\Trace.cc(79) : warning C4996: 'getenv': This function or variable may be unsafe. Consider using _dupenv_s instead. To disable deprecation, use _CRT_SECURE_NO_WARNINGS. See online help for details.
              C:/Program Files (x86)/Microsoft Visual Studio 12.0/VC/INCLUDE\stdlib.h(462) : see declaration of 'getenv'
      C:\java\javafx\10-dev\jfx\rt\modules\javafx.graphics\src\main\native-prism-d3d\Trace.cc(83) : warning C4996: 'sscanf': This function or variable may be unsafe. Consider using sscanf_s instead. To disable deprecation, use _CRT_SECURE_NO_WARNINGS. See online help for details.
              C:/Program Files (x86)/Microsoft Visual Studio 12.0/VC/INCLUDE\stdio.h(304) : see declaration of 'sscanf'
      C:\java\javafx\10-dev\jfx\rt\modules\javafx.graphics\src\main\native-prism-d3d\Trace.cc(89) : warning C4996: 'getenv': This function or variable may be unsafe. Consider using _dupenv_s instead. To disable deprecation, use _CRT_SECURE_NO_WARNINGS. See online help for details.
              C:/Program Files (x86)/Microsoft Visual Studio 12.0/VC/INCLUDE\stdlib.h(462) : see declaration of 'getenv'
      C:\java\javafx\10-dev\jfx\rt\modules\javafx.graphics\src\main\native-prism-d3d\Trace.cc(91) : warning C4996: 'fopen': This function or variable may be unsafe. Consider using fopen_s instead. To disable deprecation, use _CRT_SECURE_NO_WARNINGS. See online help for details.
              C:/Program Files (x86)/Microsoft Visual Studio 12.0/VC/INCLUDE\stdio.h(211) : see declaration of 'fopen'

      C:\java\javafx\10-dev\jfx\rt\modules\javafx.graphics\src\main\native-prism-d3d\D3DPipelineManager.cc(38) : warning C4996: 'getenv': This function or variable may be unsafe. Consider using _dupenv_s instead. To disable deprecation, use _CRT_SECURE_NO_WARNINGS. See online help for details.
              C:/Program Files (x86)/Microsoft Visual Studio 12.0/VC/INCLUDE\stdlib.h(462) : see declaration of 'getenv'
      C:\java\javafx\10-dev\jfx\rt\modules\javafx.graphics\src\main\native-prism-d3d\D3DPipelineManager.cc(432) : warning C4996: 'getenv': This function or variable may be unsafe. Consider using _dupenv_s instead. To disable deprecation, use _CRT_SECURE_NO_WARNINGS. See online help for details.
              C:/Program Files (x86)/Microsoft Visual Studio 12.0/VC/INCLUDE\stdlib.h(462) : see declaration of 'getenv'

            Assignee:
            Chien Yang (Inactive)
            Reporter:
            Chien Yang (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: