8179464: [Windows][prism-d3d] Fix compiler _CRT_SECURE_ warnings

Reviewed-by: kcr